--- a/00-J1-CS1B-ASI-September-2021/Question_7.Rmd
+++ b/00-J1-CS1B-ASI-September-2021/Question_7.Rmd
@@ -34,6 +34,31 @@ pre {
 }
 ```
 
+Q.7)
+You are working as an Actuarial analyst in a medium size health insurance company in India. Your manager has asked you to analyse the claim amounts paid data of the past six months.
+You have received the data set “HealthClaims.csv” from the claims department of your company with the following explanations of the data fields
+IAI CS1B-0921
+Page 5 of 5
+GEOGRAPHY: The geographical region of residence of the Insured
+PROFESSION: Profession of the Insured
+GENDER: Gender of the Insured
+AGE: Age of the Insured
+CLAIM_AMOUNT: Amount of health claim paid by the Insurer
+Refer to the data set “HealthClaims.csv”.
+i) Fit a linear regression model to the data with “CLAIM_AMOUNT” as the response and other variables as explanatory variables (consider “Age” as numerical variable and others as categorical variables).
+Provide your interpretation of the model by explaining R-Squared, Adjusted R-Squared & p-value of the model. Identify the significant variables in the prediction of claim “CLAIM_AMOUNT”.
+(10)
+ii) Determine 95% confidence intervals for the parameters of the regression model.
+(3)
+iii) Plot “QQ plot of the residuals” and comment on applicability of linear regression model.
+(4)
+iv) Your manager has also suggested you to include the interaction effects between Geography and Profession, Profession and Gender, Gender and Geography as additional explanatory variables to the set of independent variables taken in (i) for the purpose of improvement of the model. Comment on the suitability of inclusion of interaction effects for the purpose of improvement of the model.
+(10)
+v) One of your friend working with Actuarial consulting firm told you that natural logarithm{loge(CLAIM_AMOUNT)} is better fit to normal distribution than “CLAIM_AMOUNT”. You wanted to validate the same by fitting a linear regression model to the data with loge(CLAIM_AMOUNT) as the response and other variables as explanatory variables. Identify and comment on the key differences between the models in (i) and (iv).
+(8)
+[35]
+**********************
+---
 Solution 7:
 i) # Fitting Linear Regression Model
 R Code:
