--- a/00-Q1-CS1B-ASI-May-2023/Q1-Question-2.Rmd
+++ b/00-Q1-CS1B-ASI-May-2023/Q1-Question-2.Rmd
@@ -1,3 +1,43 @@
+---
+title: "Statistics with R"
+subtitle: "Introduction to R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(magrittr)
+library(knitr)
+library(dplyr)
+library(janitor)
+
+
+```
+
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```
+
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 1
+
+---
+
 Solution 2:
 i) i
 .
@@ -30,8 +70,9 @@ iii) i
 a) a
 .
 plot(Sales$Value,Sales$Age) (1)
-IAI CS1B-0523
- Page 4 of 9
+
+---
+
 (1)
 # No trend (showing linear relationship) is visible from the scatter plot.
 # Most likely it indicates that correlation is zero.
